tests/paczka1/small_fuzzy/83197836.err
Error in line 1: 69tjN S34 40,0
Error in line 3: S928 S34 15,2
Error in line 11: KBfBuN1Uh4 S928 85,63
Error in line 12: Ed6 A547 49,2
